test/errors/delete_constant.li.correct
error: delete_constant.li:2:1: cannot delete constant variable 'y'
│ delete y;
│ ~~~~~~~~~
│ ^
